Fixed Browser opening
Exit on result/loading screen failing to load